--- a/style.css
+++ b/style.css
@@ -126,5 +126,19 @@ body {
   .photo-link:hover {
 	background-color: #b30000;
   }
+
+  .video-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: -1;
+  }
+  iframe {
+	width: 100%;
+	height: 100%;
+	border: none;
+  }
   
   
