--- a/style.css
+++ b/style.css
@@ -136,8 +136,11 @@ body {
 	z-index: -1;
   }
   iframe {
-	width: 100%;
-	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
 	border: none;
   }
   
