--- a/style.css
+++ b/style.css
@@ -133,14 +133,11 @@ body {
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	z-index: -1;
+	border: none;
   }
   iframe {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	border: none;
   }
   
